<resources>
    <string name="app_name">GYSapplication</string>
    <string name="welcome_to_get_your_services">Welcome to get your services</string>
    <string name="log_in">LOG in</string>
    <string name="welcome">Welcome to Get Your Services</string>
    <string name="sign_in_as_a_service_provider">Sign in as a Service Provider</string>
    <string name="sign_in_as_a_customer">Sign in as a Customer</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="create_new_gys_account">CREATE NEW GYS ACCOUNT</string>
    <string name="enter_password">enter password</string>
    <string name="please_enter_your_name2">please enter your name</string>
    <string name="enter_password2">enter password</string>
    <string name="gys">TODO</string>
    <string name="service_providers">Service Providers</string>
    <string name="your_service">Your Service :</string>
    <string name="work_experience_if_any">Work Experience (if any) :</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="enter_service_you_want_to_do">enter service you want to do</string>
    <string name="enter_contact_no">enter contact no</string>
    <string name="enter_your_address">enter your address</string>
    <string name="submit">Submit</string>
    <string name="generate_id">Generate ID</string>
    <string name="enter_work_experience">enter work experience</string>
    <string name="services">SERVICES</string>
    <string name="mechanics">MECHANICS</string>
    <string name="cleaners">Cleaners</string>
    <string name="carpenters">Carpenters</string>
    <string name="plumbers">Plumbers</string>
    <string name="mechanics1">Mechanics</string>
    <string name="mechanic_1">MEchanic 1</string>
    <string name="mechanic_2">MECHANIC 2</string>
    <string name="mechanic_3">MEchanic 3</string>
    <string name="mechanic_4">MEchanic 4</string>
    <string name="mechanic_s_info">Mechanic\'s Info</string>
    <string name="availability">Availability :</string>
    <string name="name_john_wendor">Name : John Wendor</string>
    <string name="contact_details_7238933456">Contact details: 7238933456</string>
    <string name="work_experience">Work Experience :</string>
    <string name="having_work_experience_of_3_years">Having work experience of 3 years.</string>
    <string name="working_id">Working ID :</string>
    <string name="jowm72">JOWM72</string>
    <string name="price_as_per_the_work">Price : As per the work</string>
    <string name="book_worker">Book Worker</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="status">Status</string>
    <string name="you_have_booked_mechanic_he_will_be_at_your_location_in_15_20_minutes">You have booked Mechanic he will be at your location in 15-20 minutes.</string>
    <string name="thank_you_for_using_gys">Thank You for using GYS</string>
    <string name="customer_s_name">Customer\'s Name :</string>
    <string name="enter_your_name">enter your name</string>
    <string name="customers_contact">Customers Contact:</string>
    <string name="enter_your_contact_number">enter your contact number</string>
    <string name="customer_s_loacation">Customer\'s Loacation</string>
    <string name="submit2">Submit</string>
    <string name="enter_your_location_for_worker">enter your location for worker</string>
    <string name="your_id">Your ID</string>
    <string name="but">Submit</string>
    <string name="bt2">book worker</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="cn">Customer\'s name:</string>
    <string name="customer_s_location">Customer\'s location :</string>
    <string name="customer_s_contact_info">Customer\'s Contact Info :</string>
    <string name="enter_your_location">enter your location</string>
    <string name="enter_your_contact_no">enter your contact no</string>
    <string name="textview1">TextView</string>
    <string name="enter_name">enter name</string>
    <string name="n">Customer\'s name:</string>
    <string name="l">Customer\'s Location</string>
    <string name="tvc">Customer\'s Contact :</string>
    <string name="enter_number">enter number</string>>
    <string name="you_have_successfully_created_your_service_provider_s_account_on_gys_application">You have successfully created your Service Provider\'s Account on GYS application.</string>

</resources>