<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".Mechanic1">

    <TextView
        android:id="@+id/MI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/aladin"
        android:text="@string/mechanic_s_info"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/name_john_wendor"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/AV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/availability"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp" />

    <ImageView
        android:id="@+id/YES"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="-35dp"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginStart="190dp"
        android:contentDescription="@string/todo1" />

    <ImageView
        android:id="@+id/NO"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-38dp"
        app:srcCompat="@android:drawable/btn_dialog"
        android:layout_marginStart="290dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_details_7238933456"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/WE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/work_experience"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/YEAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/having_work_experience_of_3_years"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/WID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/working_id"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/UID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/jowm72"
        android:textColor="@color/colorRadium"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/price_as_per_the_work"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/n"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/color"
        android:ems="10"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/l"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/el"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/color"
        android:ems="10"
        android:hint="@string/enter_your_location_for_worker"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />


    <TextView
        android:id="@+id/tvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvc"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/color"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:autofillHints="" />
    <Button
        android:id="@+id/but2"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/bt2"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>