<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".Mechanics">

    <TextView
        android:id="@+id/tvmechs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aladin"
        android:text="@string/mechanics"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnmech1"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/mechanic_1"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnmech2"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/mechanic_2"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnmech3"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/mechanic_3"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnmech4"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/mechanic_4"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>