<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvwel"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/aladin"
        android:text="@string/welcome"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/ivgys"
        android:layout_width="wrap_content"
        android:layout_height="163dp"
        app:srcCompat="@drawable/gys"
        android:contentDescription="@string/gys" />

    <TextView
        android:id="@+id/tvsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/adamina"
        android:text="@string/sign_in_as_a_service_provider"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@color/color"
        android:ems="10"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etps1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:background="@color/color"
        android:inputType="textPassword"
        android:autofillHints="" />
    <Button
        android:id="@+id/btnlogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_dark"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvcus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/adamina"
        android:text="@string/sign_in_as_a_customer"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/etus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/please_enter_your_name"
        android:background="@color/color"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etps2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:background="@color/color"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnlogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_dark"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create"
        android:layout_width="194dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@android:color/background_light"
        android:fontFamily="@font/acme"
        android:text="@string/create_new_gys_account"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>